# Hcktn_1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Regenerate_2019.ps1  hw.cpp  krug_i_kvadrat.cpp
Snafu/: Snafu.sln
Snafu/Snafu/: Snafu.vcxproj  Snafu.vcxproj.filters  bmpwriter.cpp  bmpwriter.h  main.cpp  structs.h
Sources/: CMakeLists.txt  Canvas.cpp  Canvas.h  Image.cpp  Image.h  Logger.cpp  Logger.h  Mandlebrot.cpp  Mandlebrot.h  Source.cpp  Utils.cpp  Utils.h  Utils.hpp
include/: application.h  canvas.h
src/: application.cpp  canvas.cpp  main.cpp
